RRTB-11: Add DynamoDB tables and comprehensive infrastructure tests